// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publication Details Component  should not render component with empty publication 1`] = `""`;

exports[`Publication Details Component  should render component 1`] = `
<StandardCard
  title="Publication details"
>
  <WithStyles(Grid)
    container={true}
    direction="row"
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        data="Journal Article"
        heading="Publication type"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        data="Article (original research)"
        heading="Sub-type"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        data={
          <ul>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5B%5D=UQ%3A3825&searchMode=advanced"
              >
                School of Chemistry and Molecular Biosciences
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5B%5D=UQ%3A218311&searchMode=advanced"
              >
                HERDC Pre-Audit
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5B%5D=UQ%3A171723&searchMode=advanced"
              >
                UQ Centre for Clinical Research Publications
              </Link>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without collection data 1`] = `
<StandardCard
  title="Publication details"
>
  <WithStyles(Grid)
    container={true}
    direction="row"
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        data="Journal Article"
        heading="Publication type"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without subtype data 1`] = `
<StandardCard
  title="Publication details"
>
  <WithStyles(Grid)
    container={true}
    direction="row"
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        data="Journal Article"
        heading="Publication type"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <Component
        data={
          <ul>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5B%5D=UQ%3A3825&searchMode=advanced"
              >
                School of Chemistry and Molecular Biosciences
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5B%5D=UQ%3A218311&searchMode=advanced"
              >
                HERDC Pre-Audit
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5B%5D=UQ%3A171723&searchMode=advanced"
              >
                UQ Centre for Clinical Research Publications
              </Link>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardCard>
`;
